[package]
name = "syn_derive"
version = "0.1.8"
edition = "2021"
authors = ["Kyuuhachi <caagr98@gmail.com>"]
description = "Derive macros for `syn::Parse` and `quote::ToTokens`"
repository = "https://github.com/Kyuuhachi/syn_derive"
license = "MIT OR Apache-2.0"
categories = ["development-tools::procedural-macro-helpers"]

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0", features = ["parsing", "derive"] }
quote = "1.0"
proc-macro2 = "1.0"
proc-macro-error = { version = "1.0", default-features = false }

[features]
full = ["syn/full"]
default = ["full"]
